syntax = "proto3";

package instana.node.grpc.test;

message TestRequest {
  string parameter = 1;
}

message TestReply {
  string message = 1;
}

service TestService {
  rpc MakeUnaryCall (TestRequest) returns (TestReply) {}
  rpc StartServerSideStreaming (TestRequest) returns (stream TestReply) {}
  rpc StartClientSideStreaming (stream TestRequest) returns (TestReply) {}
  rpc StartBidiStreaming (stream TestRequest) returns (stream TestReply) {}
}


